<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_movie"
        android:checked="true"
        android:color="@color/colorAccent"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/app_bar_tvshow"
        android:color="@color/colorAccent"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/app_bar_favorite"
        android:color="@color/colorAccent"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/app_bar_search"
        android:color="@color/colorAccent"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
</menu>